tdf#139147 sw outline UI: allow clearing of custom list format

Since LO 6.4.5, primarily for DOCX support, numbering can
have a custom format that ignores the suffix, prefix etc.
Well, the UI has no way to see or edit that. So allow the
UI to throw that away and go back to the normal
prefix/subLevels/suffix model.

Change-Id: I84f93d37c95dabb18facf9140bf8f85b4bac5006
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/109839
Tested-by: Jenkins
Reviewed-by: Vasily Melenchuk <vasily.melenchuk@cib.de>
Reviewed-by: Justin Luth <justin_luth@sil.org>